<resources>
    <string name="app_name">Kitchen Manager</string>
    <string name="title_fridge">Fridge</string>
    <string name="title_shopping_list">Shopping list</string>
    <string name="title_food_dairy">Food dairy</string>
    <!--    <string name="title_gallery">Gallery</string>-->
    <string name="title_account">Account</string>


    <string name="example_amount_of_ingredients">2</string>
    <string name="example_amount_of_ingredients_multiply">x</string>
    <string name="hint_ingredient_name">Name</string>
    <string name="hint_ingredient_amount">0</string>
    <string name="example_weight_type">g</string>
    <string name="hint_manufacturer">Manufacturer</string>
    <string name="hint_comment">Comment</string>

    <string name="weight_type_grams">Grams</string>
    <string name="weight_type_litres">Litres</string>
    <string name="weight_type_pieces">Pieces</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="amount_of_ingredients">Items:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="change_ingredient">Change ingredient</string>
    <string name="save">Save</string>
    <string name="fridge">fridge</string>
    <string name="shopping_list">shopping list</string>
    <string name="basket">basket</string>
    <string name="add_to">Add to:</string>
    <string name="move_to">Move to:</string>
    <string name="want_to_delete_item">Delete item?</string>
    <string name="yes">Yes</string>
    <string name="search">Search</string>
    <string name="ingredient">Ingredient</string>
    <string name="shelf_life">Shelf life</string>
    <string name="move_to_fridge">Move to fridge</string>
    <string name="consume_fully">Fully consume</string>
    <string name="delete">Delete</string>
    <string name="partly_consume">Partly consume</string>
    <string name="consume">Consume</string>
    <string name="was_in_fridge">Was in fridge:</string>
    <string name="example_was_in_fridge">726 g</string>
    <string name="to_consume">To consume:</string>
    <string name="example_to_consume">324 g</string>
    <string name="oops_try_again">Ooops! Re-open page and try again</string>
    <string name="consumed">Fully consumed</string>
    <string name="deleted">Deleted</string>
    <string name="moved_to_fridge">Moved to fridge</string>
    <string name="example_date">22/11/1963</string>
    <string name="example_ingredient_name">Pizza</string>
    <string name="example_consumed_calories">150</string>
    <string name="calories">%d kcal</string>
    <string name="nothing_consumed_that_day">Nothing consumed that day</string>
    <string name="consumed_x_calories">Consumed %d kilo-calories</string>
    <string name="hint_calories">Kilo-calories</string>
    <string name="enter_your_name">Your name</string>
    <string name="join_hint">If any of your family members are already using this application, you should note this in the selector below, ask him to share a unique refrigerator number
        and enter the number in the appropriate field. If you are the first user, leave it as it is.</string>
    <string name="authorize">Authorize</string>
    <string name="already_in_use">Already using</string>
    <string name="example_fridge_id">1cfew5g126df65rg41csdf4</string>
    <string name="is_empty">Fill this field</string>


    <string name="incorrect_fridge_id">Incorrect fridge id</string>
    <string name="id_fridge_preferences_field">ID_FRIDGE</string>
    <string name="user_name_preferences_field">USER_NAME</string>
    <string name="hello_user">Hello, %s!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="fridge_id_hint">By this unique number other members of your family can join your fridge. Tap to copy to clipboard.</string>
    <string name="users_now">By the moment, to your fridge joined %d members: %s </string>

    <string name="copied">#%s copied</string>
    <string name="confirm_question">This action cannot be reverted. Continue?</string>

    <string name="firestore_field_array_fridge_members">members</string>
    <string name="firestore_collection_fridges">fridges</string>
    <string name="firestore_collection_ingredients">ingredients</string>
    <string name="firestore_field_ingredient_id">id</string>;
    <string name="firestore_field_ingredient_name">name</string>
    <string name="firestore_field_ingredient_manufacturer">manufacturer</string>
    <string name="firestore_field_ingredient_weight_type">weightType</string>
    <string name="firestore_field_ingredient_amount_of_distinct">amountOfDistinct</string>
    <string name="firestore_field_ingredient_amount_df_ingredients">amountOfIngredients</string>
    <string name="firestore_field_ingredient_full_amount">fullAmount</string>
    <string name="firestore_field_ingredient_calories_in_distinct">caloriesInDistinct</string>
    <string name="firestore_field_ingredient_comment">comment</string>
    <string name="firestore_field_ingredient_stage_type">stageType</string>
    <string name="firestore_field_ingredient_shelf_life_time">shelfLifeTime</string>
    <string name="firestore_field_ingredient_category">category</string>


</resources>
