<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/item_fridge_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/amount_of_ingredients_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/amount_of_ingredients_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="2dp"
                        android:text="@string/example_amount_of_ingredients"
                        android:textSize="@dimen/big_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/example_amount_of_ingredients_multiply" />

                </LinearLayout>


                <TextView
                    android:id="@+id/ingredient_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/hint_ingredient_name"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/manufacturer_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/hint_manufacturer" />

            <TextView
                android:id="@+id/shelf_life_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="4dp"
                android:text="@string/shelf_life" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ingredient_amount_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center">

            <TextView
                android:id="@+id/ingredient_amount_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="2dp"
                android:text="@string/hint_ingredient_amount"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weight_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/example_weight_type"
                android:textSize="@dimen/big_text_size" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
