<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--    &lt;!&ndash; Dummy view to get focus&ndash;&gt;
        -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">


            <AutoCompleteTextView
                android:id="@+id/ingredient_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_ingredient_name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/categories_chips_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_weight="1">

                <EditText
                    android:id="@+id/ingredient_amount_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="end"
                    android:hint="@string/hint_ingredient_amount"
                    android:inputType="numberDecimal" />


                <Spinner
                    android:id="@+id/weight_types_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="0">

                <Button
                    android:id="@+id/subtract_from_amount_of_ingredients_button"
                    style="@style/RoundButtonStyle"
                    android:layout_gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/amount_of_ingredients_text_view"
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ems="10"
                    android:gravity="center"
                    android:text="@string/example_amount_of_ingredients"
                    android:textSize="@dimen/big_text_size" />

                <Button
                    android:id="@+id/add_to_amount_of_ingredients_button"
                    style="@style/RoundButtonStyle"
                    android:text="+" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <EditText
                android:id="@+id/calories_edit_text"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_calories"
                android:inputType="number"
                android:paddingHorizontal="12dp"
                android:textSize="@dimen/text_size" />


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <AutoCompleteTextView
                android:id="@+id/manufacturer_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_manufacturer"
                android:inputType="text" />

            <!--        <Spinner
                        android:id="@+id/manufacturers_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:id="@+id/shelf_life_text_view"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical"
                android:hint="@string/shelf_life"
                android:paddingHorizontal="12dp"
                android:textSize="@dimen/text_size" />


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <EditText
                android:id="@+id/comment_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_comment"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            android:minHeight="48dp">

            <TextView
                android:id="@+id/actions_destination_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="12dp"

                android:text="@string/add_to"
                android:textSize="@dimen/text_size" />

            <RadioGroup
                android:id="@+id/stage_type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/in_fridge_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fridge" />

                <RadioButton
                    android:id="@+id/in_basket_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/basket" />


                <RadioButton
                    android:id="@+id/to_buy_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/shopping_list" />
            </RadioGroup>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:gravity="end">

            <!--        <Button
                        android:id="@+id/dismiss_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:text="@string/cancel" />-->

            <Button
                android:id="@+id/change_ingredient_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="8dp"
                android:text="@string/add" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>