<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firebase_toolbar">

        <EditText
            android:id="@+id/registration_user_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_your_name"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/registration_is_app_in_use_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/already_in_use"
            app:layout_constraintStart_toStartOf="@+id/registration_user_name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/registration_join_hint_text_view" />

        <EditText
            android:id="@+id/registration_fridge_id_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/example_fridge_id"
            android:maxLines="1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/registration_join_hint_text_view"
            app:layout_constraintStart_toStartOf="@+id/registration_is_app_in_use_switch"
            app:layout_constraintTop_toBottomOf="@+id/registration_is_app_in_use_switch" />

        <TextView
            android:id="@+id/registration_join_hint_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/join_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/registration_user_name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/registration_user_name_edit_text" />

        <Button
            android:id="@+id/registration_authorize_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/authorize"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>