<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--    &lt;!&ndash; Dummy view to get focus&ndash;&gt;
        -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">


            <TextView
                android:id="@+id/ingredient_name_text_view"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_vertical"
                android:paddingHorizontal="8dp"
                android:text="@string/hint_ingredient_name"
                android:textSize="@dimen/text_size" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:paddingHorizontal="8dp"
                android:text="@string/was_in_fridge"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/was_in_fridge_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/example_was_in_fridge"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:paddingHorizontal="8dp"
                android:text="@string/to_consume"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/to_consume_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/example_to_consume"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="8dp">

            <SeekBar
                android:id="@+id/to_consume_seekBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:progress="25"
                android:progressTint="@color/colorPrimary"
                android:thumbTint="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">


            <Button
                android:id="@+id/consume_ingredient_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="8dp"
                android:text="@string/consume" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>